[gd_scene load_steps=27 format=2]

[ext_resource path="res://assets/font/Schrödinger.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/menu/newPlayer/NewPlayer.gd" type="Script" id=2]
[ext_resource path="res://assets/textures/character/player_frames/main-character-sheet.png" type="Texture" id=3]
[ext_resource path="res://scenes/menu/newPlayer/Confirm.gd" type="Script" id=5]
[ext_resource path="res://assets/audio/music/menu/new/Loop_Kings_Feast.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 2 ), SubResource( 2 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 4 ), SubResource( 4 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 1.0
} ]

[sub_resource type="DynamicFontData" id=6]
font_path = "res://assets/font/Schrödinger.ttf"

[sub_resource type="DynamicFont" id=7]
size = 28
font_data = SubResource( 6 )

[sub_resource type="DynamicFontData" id=8]
font_path = "res://assets/font/Schrödinger.ttf"

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = SubResource( 8 )

[sub_resource type="DynamicFontData" id=10]
font_path = "res://assets/font/Schrödinger.ttf"

[sub_resource type="DynamicFont" id=11]
size = 32
font_data = SubResource( 10 )

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="DynamicFontData" id=13]
font_path = "res://assets/font/Schrödinger.ttf"

[sub_resource type="DynamicFont" id=14]
size = 50
font_data = SubResource( 13 )

[sub_resource type="DynamicFontData" id=15]
font_path = "res://assets/font/Schrödinger.ttf"

[sub_resource type="DynamicFont" id=16]
size = 32
font_data = SubResource( 15 )

[sub_resource type="DynamicFontData" id=17]
font_path = "res://assets/font/Schrödinger.ttf"

[sub_resource type="DynamicFont" id=18]
size = 22
font_data = SubResource( 17 )

[sub_resource type="DynamicFontData" id=19]
font_path = "res://assets/font/Schrödinger.ttf"

[sub_resource type="DynamicFont" id=20]
size = 22
font_data = SubResource( 19 )

[sub_resource type="DynamicFont" id=21]
size = 22
font_data = ExtResource( 1 )

[node name="NewPlayer" type="Node2D"]
script = ExtResource( 2 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="Background" type="ColorRect" parent="UI"]
anchor_left = -0.000874418
anchor_right = 0.999126
anchor_bottom = 1.0
color = Color( 0.0666667, 0.054902, 0.219608, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="UI/Background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -115.5
margin_right = 115.5
margin_bottom = 65.0
custom_fonts/font = SubResource( 1 )
text = "NUEVA PARTIDA"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="AnimatedSprite" parent="UI/Background"]
position = Vector2( 320.56, 152 )
scale = Vector2( 2, 2 )
frames = SubResource( 5 )
animation = "idle"
frame = 4
playing = true

[node name="Description" type="Label" parent="UI/Background"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -287.441
margin_top = -312.0
margin_right = 291.559
margin_bottom = -247.0
custom_fonts/font = SubResource( 7 )
text = "Escriba un nombre para su personaje."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnterName" type="Button" parent="UI/Background"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -215.441
margin_top = -80.0
margin_right = -70.4407
margin_bottom = -41.0
custom_fonts/font = SubResource( 9 )
text = "Aceptar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoBack" type="Button" parent="UI/Background"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 65.0
margin_top = -80.0
margin_right = 178.0
margin_bottom = -41.0
custom_fonts/font = SubResource( 11 )
text = "Volver"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelInput" type="PanelContainer" parent="UI/Background"]
margin_left = 81.0
margin_top = 192.0
margin_right = 561.0
margin_bottom = 256.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Input" type="LineEdit" parent="UI/Background/PanelInput"]
margin_left = 7.0
margin_top = 7.0
margin_right = 473.0
margin_bottom = 57.0
custom_styles/normal = SubResource( 12 )
custom_fonts/font = SubResource( 14 )
max_length = 16

[node name="Confirm" type="Popup" parent="UI"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.0
margin_top = -84.0
margin_right = 208.0
margin_bottom = 108.0
popup_exclusive = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Marco" type="ColorRect" parent="UI/Confirm"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="UI/Confirm/Marco"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -8.0
color = Color( 0.0941176, 0.298039, 0.101961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="UI/Confirm/Marco/Background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -140.0
margin_top = 16.0
margin_right = 145.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 16 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "CONFIRMAR NOMBRE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterName" type="Label" parent="UI/Confirm/Marco/Background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -148.0
margin_top = 72.0
margin_right = 148.0
margin_bottom = 105.0
custom_fonts/font = SubResource( 18 )
text = "PlayerName"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmCharacterButton" type="Button" parent="UI/Confirm/Marco/Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 52.0
margin_top = 44.0
margin_right = 155.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 20 )
text = "Aceptar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelCharacterButton" type="Button" parent="UI/Confirm/Marco/Background"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 48.0
margin_top = -40.0
margin_right = 152.0
margin_bottom = -11.0
custom_fonts/font = SubResource( 21 )
text = "Volver"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Error" type="Popup" parent="UI"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -52.0
margin_right = 256.0
margin_bottom = 140.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Marco" type="ColorRect" parent="UI/Error"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="UI/Error/Marco"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
color = Color( 0.47451, 0.164706, 0.164706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="UI/Error/Marco/Background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -152.0
margin_top = 16.0
margin_right = 143.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 16 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "NOMBRE YA EN USO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterName" type="Label" parent="UI/Error/Marco/Background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -160.0
margin_top = 64.0
margin_right = 144.0
margin_bottom = 107.0
custom_fonts/font = SubResource( 18 )
text = "Intente con otro nombre."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ok" type="Button" parent="UI/Error/Marco/Background"]
margin_left = 136.0
margin_top = 128.0
margin_right = 281.0
margin_bottom = 167.0
custom_fonts/font = SubResource( 20 )
text = "Aceptar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -15.0

[connection signal="confirm" from="." to="UI/Confirm" method="_on_NewPlayer_confirm"]
[connection signal="pressed" from="UI/Background/EnterName" to="." method="_on_EnterName_pressed"]
[connection signal="pressed" from="UI/Background/GoBack" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="UI/Confirm/Marco/Background/ConfirmCharacterButton" to="." method="_on_ConfirmCharacterButton_pressed"]
[connection signal="pressed" from="UI/Confirm/Marco/Background/CancelCharacterButton" to="UI/Confirm" method="_on_CancelCharacterButton_pressed"]
